[gd_scene load_steps=11 format=3 uid="uid://cn4sis57vp3si"]

[ext_resource type="Script" path="res://Scenes/Game.gd" id="1_kppf7"]
[ext_resource type="PackedScene" uid="uid://dqpomijhq15m3" path="res://Scenes/Map/Map.tscn" id="2_cjnm8"]
[ext_resource type="Theme" uid="uid://cb2tqos08yhkd" path="res://Scenes/MainMenu/assets/MinimalUI/MinimalUI.tres" id="3_uw0hp"]
[ext_resource type="PackedScene" uid="uid://603k3vy4p3f1" path="res://Scenes/MainMenu/scenes/settings.tscn" id="4_fwwrp"]

[sub_resource type="Animation" id="Animation_bpgy3"]
length = 0.001
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameOver:rotation")
tracks/0/interp = 3
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_bxgkv"]
resource_name = "idle"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameOver:rotation")
tracks/0/interp = 3
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.5, 5),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [0.261799, -0.261799, 0.261799]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v0xvq"]
_data = {
"RESET": SubResource("Animation_bpgy3"),
"idle": SubResource("Animation_bxgkv")
}

[sub_resource type="Animation" id="Animation_1ua6s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameOver:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_pbvfp"]
resource_name = "show"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameOver:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6qsoo"]
_data = {
"RESET": SubResource("Animation_1ua6s"),
"show": SubResource("Animation_pbvfp")
}

[node name="Game" type="Node2D"]
script = ExtResource("1_kppf7")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -192.0
offset_top = -200.0
offset_right = 1408.0
offset_bottom = 896.0
color = Color(0, 0, 0, 1)

[node name="Map" parent="." instance=ExtResource("2_cjnm8")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_mode = 3

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_uw0hp")

[node name="PauseMenu" type="VBoxContainer" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -20.0
offset_right = 50.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Resume" type="Button" parent="CanvasLayer/Panel/PauseMenu"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
focus_neighbor_top = NodePath("../MainMenu")
focus_neighbor_bottom = NodePath("../Option")
theme = ExtResource("3_uw0hp")
theme_override_font_sizes/font_size = 24
text = "Resume"

[node name="Restart" type="Button" parent="CanvasLayer/Panel/PauseMenu"]
auto_translate_mode = 1
visible = false
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
focus_neighbor_top = NodePath("../MainMenu")
focus_neighbor_bottom = NodePath("../Option")
theme = ExtResource("3_uw0hp")
theme_override_font_sizes/font_size = 24
text = "Restart"

[node name="Option" type="Button" parent="CanvasLayer/Panel/PauseMenu"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
focus_neighbor_top = NodePath("../Resume")
focus_neighbor_bottom = NodePath("../MainMenu")
theme = ExtResource("3_uw0hp")
theme_override_font_sizes/font_size = 24
text = "Option"

[node name="MainMenu" type="Button" parent="CanvasLayer/Panel/PauseMenu"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
focus_neighbor_top = NodePath("../Option")
focus_neighbor_bottom = NodePath("../Resume")
theme = ExtResource("3_uw0hp")
theme_override_font_sizes/font_size = 24
text = "Main Menu
"

[node name="Settings" parent="CanvasLayer/Panel" node_paths=PackedStringArray("pre_scene") instance=ExtResource("4_fwwrp")]
visible = false
layout_mode = 1
pre_scene = NodePath("../../..")

[node name="GameOver" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -169.5
offset_top = -276.0
offset_right = 169.5
offset_bottom = -126.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(169, 0)
size_flags_horizontal = 4
theme = ExtResource("3_uw0hp")
theme_override_font_sizes/font_size = 50
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1
visible_characters = 0
visible_ratio = 0.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Panel"]
libraries = {
"": SubResource("AnimationLibrary_v0xvq")
}
autoplay = "idle"

[node name="AnimationPlayer2" type="AnimationPlayer" parent="CanvasLayer/Panel"]
libraries = {
"": SubResource("AnimationLibrary_6qsoo")
}
autoplay = "show"

[connection signal="pressed" from="CanvasLayer/Panel/PauseMenu/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/PauseMenu/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/PauseMenu/Option" to="." method="_on_option_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/PauseMenu/MainMenu" to="." method="_on_main_menu_pressed"]
